v0.13
	* ADD : Initial support for multiple projections via proj4. Enable in Config.pri with PROJ=1
	* FIX : Crash during OSM import (fixes #1536)
	* ADD : Option (in Manager) to autoload/autoshow the World
	* FIX : Implement dynamic UI translation (fixes #1432)
	* ADD : Generalize the concept of download progress window
	* FIX : If one of the translation composant (Qt or Merkaartor) is missing, allow the other to be loaded.
	* FIX : Add missing tr() calls in render dialogs.
	* FIX : Messagebox-Cancel after deleting a line did not work (fixes #1392)
	* ADD : Native SVG renderer
	* ADD : Allow to break roads (and areas) with a single node (fixes #1505)
	* ADD : Relation member context menu for center and zoom on the properties
	dock
	* ADD : Allow to remove a member from a relation thru the properties dock.
	* FIX : switch to skulpture 2.2 custom style by default
	* FIX : Don't allow templates combo to grow depending on content (fixes #1482)
	* FIX : Allow disabling "Don't connect GPX nodes separated more than.." by setting it to 0. (fixes #1488)
	* FIX : getDefaultLanguage() returns an invalid value with 2-parts language definition (like en_GB) (by Lukasz Jernas) (closes #1417)
	* ADD : Single-node splitting of roads even with a connection to the extremity of another road (by Yves Goergen) (closes #1419)
	* FIX : Declutter - move translations to a seperate directory.
	* ADD : Custom Qt style (skulpture by Christoph Feck) to bypass Qt expanding dock problem on linux. Enable via preferences-visual. (fixes #1482)
	* FIX : Allow port number in WMS/TMS server address (fixes #1479)
	* ADD : Save relative icon filenames in map styles if not builtin (closes #1463) 
	* FIX : Don't loose selection(s) on "download more" (fixes #1470)
	* FIX : Make at least docks translated after a restart (refs #1432)
	* FIX : Do not re-sort features when zooming or when latitude changes.
	* FIX : Make "Resolve Relations" work as intended (fixes #1449)